app/overlays/staging/patch-api-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: consul
spec:
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: "staging"
        tags.datadoghq.com/version: "latest"
    spec:
      containers:
        - name: api
