app/overlays/staging/patch-web-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: consul
spec:
  template:
    spec:
      containers:
        - name: web
