app/overlays/staging/patch-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: consul
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "REPLACE_WITH_ACM_CERT_ARN"
    external-dns.alpha.kubernetes.io/hostname: web.staging.netlix.dev
spec:
  rules:
    - host: web.staging.netlix.dev
